gitops/apps/production/wrsys-test/meshcentral/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meshcentral
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: mesh-test.whiteriversystems.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meshcentral
            port:
              name: https
  tls:
  - hosts:
    - mesh-test.whiteriversystems.com
    secretName: mesh-test.whiteriversystems.com-tls
